# SxChipset_Rpi

./: .gitignore  .gitmodules  LICENSE  README.md
projects/Chipset2560/: README.md  platformio.ini
projects/Chipset2560/include/: Detect.h  OptionalDevice.h  Pinout.h  Pins.h  SeesawDevices.h  Setup.h  Types.h
projects/Chipset2560/src/: main.cc
projects/ChipsetRP2040/: CMakeLists.txt  extra_script.py  platformio.ini
projects/ChipsetRP2040/src/: address_assignment.pio  main.cc  read_parallel.pio  write_parallel.pio
projects/ClockChip/: platformio.ini
projects/ClockChip/src/: main.cc
projects/Coprocessor2/src/: main.cc
projects/ExperimentPlatform/: platformio.ini
projects/ExperimentPlatform/include/: Concepts.h
projects/ExperimentPlatform/src/: ATMEGA2560Backend.cc  ATMEGA4809Backend.cc  main.cc
projects/PLD/: CacheAndMemoryDecoder.chp  CacheAndMemoryDecoder.fus  CacheAndMemoryDecoder.jed  CacheAndMemoryDecoder.pin  CacheAndMemoryDecoder.pld  ConnectionFunctionalityBoard.chp  ConnectionFunctionalityBoard.fus  ConnectionFunctionalityBoard.jed  ConnectionFunctionalityBoard.pin  ConnectionFunctionalityBoard.pld  Makefile  NewCPUCardDecoder.chp  NewCPUCardDecoder.fus  NewCPUCardDecoder.jed  NewCPUCardDecoder.pin  NewCPUCardDecoder.pld  Rearranger.chp  Rearranger.fus  Rearranger.jed  Rearranger.pin  Rearranger.pld
projects/SystemChip/: platformio.ini
projects/SystemChip/src/: main.cc
projects/common/chipset/: library.json
projects/common/deception/: Deception.h  (+2 more)
research/: Makefile  README.md  code.py
research/dxcore_test/: platformio.ini
(+10 files in other folders)
